VendorCalc/force-app/main/default/objects/Additional_Pay__c/Additional_Pay__c.object-meta.xml
<CustomObject>
    <label>Additional Pay</label>
    <nameField>
        <displayFormat>AddPay-{0000}</displayFormat>
        <label>Additional Pay Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Pays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>