VendorCalc/force-app/main/default/objects/Additional_Pay__c/fields/Additional_period__c.field-meta.xml
<CustomField>
    <fullName>Additional_period__c</fullName>
    <label>Additional period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>