VendorCalc/force-app/main/default/objects/Additional_Pay__c/fields/anzCalc__c.field-meta.xml
<CustomField>
    <fullName>anzCalc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calculator Result</label>
    <referenceTo>Calculator__c</referenceTo>
    <relationshipLabel>Additional Pays</relationshipLabel>
    <relationshipName>Additional_Pays</relationshipName>
    <type>Lookup</type>
</CustomField>